.travis.yml: add missing dep

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ addons:
       - texlive-latex-extra
       - texlive-humanities
       - texlive-pstricks
+      - texlive-latex3
       - transfig
       - inkscape
       - doxygen
