--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,10 @@ env:
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
     - CTP=yes WERROR=yes J=4
     - CTP=yes WALL=yes J=4
-    - XTP=yes WERROR=yes J=4
-    - XTP=yes WALL=yes MAN=yes J=4
+    - XTP=yes BDIR=build WERROR=yes J=4 TYPE=Debug
+    - XTP=yes BDIR=build WALL=yes J=4 TYPE=Debug
+    - XTP=yes BDIR=build WERROR=yes J=4 TYPE=Release
+    - XTP=yes BDIR=build WALL=yes J=4 TYPE=Release
     - WALL=yes GMX_DOUBLE=yes J=4
     - WALL=yes GMX_VERSION=5.0 J=4
     - WALL=yes GMX_VERSION=5.0 GMX_DOUBLE=yes J=4
@@ -53,9 +55,6 @@ env:
     - WALL=yes GMX_VERSION=2016 GMX_DOUBLE=yes J=4
     - WALL=yes GMX_VERSION=9999 J=4
     - WALL=yes GMX_VERSION=9999 GMX_DOUBLE=yes J=4
-    - J=1
-    - BDIR=build J=4
-    - BDIR=build J=1
     - MINIMAL=yes J=4
     - CSG_MDRUN_STEPS=500 TEST=hexane/ibi_bonded J=4
     - CSG_MDRUN_STEPS=500 TEST=hexane/ibi J=4
@@ -101,6 +100,7 @@ before_script:
 
 script:
   - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu $([[ ${TRAVIS_BRANCH} = stable ]] || echo "--dev") --prefix "$HOME/votca"
+    ${TYPE:+-DCMAKE_BUILD_TYPE=${TYPE}}
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal} ${MAN:+--devdoc}
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
     --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:+-DGMX_DOUBLE=yes}
