--- a/.travis.yml
+++ b/.travis.yml
@@ -48,9 +48,10 @@ env:
     - CCACHE_CPP2=yes #for clang
     - GVER=4.8
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
-    - XTP=yes WERROR=yes J=4
-    - XTP=yes WALL=yes J=4 XTP_MAN=yes
-    - XTP=yes J=4 BDIR=build
+    - XTP=yes WERROR=yes J=4 TYPE=Release
+    - XTP=yes WALL=yes J=4 XTP_MAN=yes TYPE=Release
+    - XTP=yes WERROR=yes J=4 BDIR=build TYPE=Debug
+    - XTP=yes WALL=yes J=4 BDIR=build TYPE=Debug
 
 before_script:
   - rm -vrf * .git
@@ -64,7 +65,7 @@ before_script:
   - if [[ ${GVER} ]]; then export CC=gcc-${GVER}; export CXX=g++-${GVER}; fi
 
 script:
-  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
+  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc} ${TYPE:+-DCMAKE_BUILD_TYPE=${TYPE}}
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal} ${XTP_MAN:+--build-manual}
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
     --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:+-DGMX_DOUBLE=yes}
