.travis.yml: add texlive-latex-recommended

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ addons:
       - pgf
       - texlive-fonts-recommended
       - texlive-latex-extra
+      - texlive-latex-recommended
       - doxygen
       - graphviz
       - python-numpy
