.travis.yml: add cm-super

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ addons:
       - texlive-fonts-recommended
       - texlive-latex-extra
       - texlive-latex-recommended
+      - cm-super
       - doxygen
       - graphviz
       - python-numpy
