--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "xtp"]
 	path = xtp
 	url = ../../votca/xtp.git
+[submodule "csg-tutorials"]
+	path = csg-tutorials
+	url = ../../votca/csg-tutorials.git
