mkl install nows properly, additionally if mkl is found gsl_prod is not installed anymore

--- a/include/votca/tools/CMakeLists.txt
+++ b/include/votca/tools/CMakeLists.txt
@@ -6,10 +6,10 @@ if (NOT WITH_SQLITE3)
   file(GLOB_RECURSE NOT_VOTCA_HEADERS database.h statement.h)
   list(REMOVE_ITEM VOTCA_HEADERS ${NOT_VOTCA_HEADERS})
 endif(NOT WITH_SQLITE3)
-if (NOT GSL_FOUND)
+if (NOT GSL_FOUND OR MKL_FOUND)
     file(GLOB_RECURSE NOT_VOTCA_HEADERS votca_gsl_boost_ublas_matrix_prod.h)
     list(REMOVE_ITEM VOTCA_HEADERS ${NOT_VOTCA_HEADERS})
-endif (NOT GSL_FOUND)
+endif (NOT GSL_FOUND OR MKL_FOUND)
 
        
 
