--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
                  --build-arg TRAVIS_COMMIT=${TRAVIS_COMMIT}
                  --build-arg TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST}
                  --build-arg TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}
-                 -t votca/votca:latest -f docker/votca docker/
+                 -t votca/votca:latest -t votca/votca:${TRAVIS_BRANCH} -f docker/votca docker/
 
 after_success:
   - if [[ ${DOCKER_USERNAME} && ${DOCKER_PASSWORD} && ${TRAVIS_PULL_REQUEST} == false && ${TRAVIS_BRANCH} == stable ]]; then
