removed MOO from xtp

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(XTP_PROGS) 
-foreach(PROG xtp_map xtp_run xtp_tools xtp_parallel xtp_dump xtp_overlap xtp_kmc_run)
+foreach(PROG xtp_map xtp_run xtp_tools xtp_parallel xtp_dump xtp_kmc_run)
   file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
 
   if( ${PROG} STREQUAL "xtp_map" )
