--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,10 @@ include_directories(${VOTCA_TOOLS_INCLUDE_DIRS})
 find_package(VOTCA_CSG REQUIRED)
 include_directories(${VOTCA_CSG_INCLUDE_DIRS})
 
+
+find_package(VOTCA_MOO REQUIRED)
+include_directories(${VOTCA_MOO_INCLUDE_DIRS})
+
 ########################################################################
 # Checks what linear algebra packages are installed                    #
 ########################################################################
