--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ env:
     - CSG_MDRUN_STEPS=500 TEST=urea-water/kb-ibi J=4
     - CSG_MDRUN_STEPS=500 TEST=urea-water/cibi J=4
     - CSG_MDRUN_STEPS=500 TEST=urea-water/cibi/pre J=4
-    - CSG_MDRUN_STEPS=500 TEST=He-Ar/imc J=4
+    - CSG_MDRUN_STEPS=500 TEST=LJ1-LJ2/imc J=4
 
 before_script:
   - rm -vrf * .git
