cmake: only show summary for main build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,5 +62,7 @@ if(NOT TARGET uninstall)
 endif()
 add_dependencies(uninstall uninstall-csgapps)
 
-include(FeatureSummary)
-feature_summary(INCLUDE_QUIET_PACKAGES WHAT ALL)
+if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
+  include(FeatureSummary)
+  feature_summary(INCLUDE_QUIET_PACKAGES WHAT ALL)
+endif (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
