--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,39 @@ set(PROJECT_VERSION "1.5-dev")
 # Cmake modules/macros are in a subdirectory to keep this file cleaner
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
 
+option(ENABLE_TESTING "Build and copy testing stuff" OFF)
+if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
+  enable_testing()
+  file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} settings.xml)
+  foreach(DIR ${FILES})
+    if(DIR MATCHES "(lammps|espresso|dlpoly|hoomd|atomistic|single_chain)")
+      continue()
+    endif()
+    string(REGEX MATCH ^.*/ DIR ${DIR})
+    list(APPEND DIRS ${DIR})
+  endforeach(DIR)
+  list(REMOVE_DUPLICATES DIRS)
+  foreach(DIR ${DIRS})
+    if (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
+      file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
+      file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${DIR}/*)
+      foreach(FILE ${FILES})
+        execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/${FILE} ${CMAKE_CURRENT_BINARY_DIR}/${FILE})
+      endforeach(FILE ${FILES})
+    endif (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
+    string(REGEX REPLACE "/$" "" DIR "${DIR}")
+    string(REPLACE / _ TESTNAME "${DIR}")
+    add_test(NAME ${TESTNAME} COMMAND ${VOTCA_CSG_INVERSE} --options settings.xml --do-iterations 1 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
+    set(CSG_MDRUN_STEPS 500)
+    if(DIR MATCHES "/(imc|re|realtime)")
+      set(CSG_MDRUN_STEPS 10000)
+    endif()
+    set_tests_properties(${TESTNAME} PROPERTIES ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}")
+  endforeach(DIR ${DIRS})
+elseif(ENABLE_TESTING)
+	message(FATAL_ERROR "We need VOTCA_PATH, VOTCA_SHARE and VOTCA_CSG_INVERSE set for testing!")
+endif()
+
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION share/votca/csg-tutorials
 	PATTERN ".git*" EXCLUDE PATTERN "step_*" EXCLUDE
 	PATTERN "CMake*" EXCLUDE PATTERN "cmake_install.cmake" EXCLUDE
