.travis.yml/cmake: reduce number of steps for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,10 @@ if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
     string(REPLACE / _ TESTNAME "${DIR}")
     add_test(NAME ${TESTNAME} COMMAND ${VOTCA_CSG_INVERSE} --options settings.xml --do-iterations 1 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
     set(CSG_MDRUN_STEPS 500)
-    if(DIR MATCHES "/(imc|re|realtime)")
-      set(CSG_MDRUN_STEPS 10000)
+    if(DIR MATCHES "/(imc|realtime)$")
+      set(CSG_MDRUN_STEPS 5000)
+    elseif(DIR MATCHES "/re$")
+      set(CSG_MDRUN_STEPS 2500)
     endif()
     set_tests_properties(${TESTNAME} PROPERTIES ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}")
   endforeach(DIR ${DIRS})
