--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,8 @@ addons:
 env:
   global:
     - HDF5_VERSION=1.8.14
-    - GMX_MAX_THREADS=8
+    - GMX_MAX_THREADS=4
+    - CSG_MDRUN_OPTS="-ntmpi 4"
     - CCACHE_CPP2=yes #for clang
     - GVER=4.8
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
