.travis.yml: add urea-water/cibi/pre test

--- a/.travis.yml
+++ b/.travis.yml
@@ -82,6 +82,7 @@ env:
     - CSG_MDRUN_STEPS=500 TEST=urea-water/ibi J=4
     - CSG_MDRUN_STEPS=500 TEST=urea-water/kb-ibi J=4
     - CSG_MDRUN_STEPS=500 TEST=urea-water/cibi J=4
+    - CSG_MDRUN_STEPS=500 TEST=urea-water/cibi/pre J=4
     - CSG_MDRUN_STEPS=500 TEST=LJ1-LJ2/imc J=4
 
 before_script:
