dft and gwbse should work as before, is testet and libxc works again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ endif()
 
 find_package(LIBXC)
 if (LIBXC_FOUND)
+    message("-- LIBXC found")
 	include_directories(${LIBXC_INCLUDE_DIRS})
 	set (LIBXC TRUE )
 else()
