--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ project(votca)
 option(BUILD_CSGAPPS "Build csgapps" OFF)
 option(BUILD_CTP "Build ctp" OFF)
 option(BUILD_XTP "Build xtp" OFF)
+if(BUILD_XTP AND NOT BUILD_CTP)
+  message(FATAL_ERROR "xtp needs ctp to be build")
+endif(BUILD_XTP AND NOT BUILD_CTP)
 
 option(ENABLE_TESTING "Build and copy testing stuff" OFF)
 if(ENABLE_TESTING)
@@ -43,6 +46,9 @@ if(BUILD_CTP)
   set(VOTCA_MOO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/moo/include
 	  CACHE PATH "moo include path")
   add_subdirectory(ctp)
+  set(VOTCA_CTP_LIBRARY votca_ctp CACHE STRING "ctp library name")
+  set(VOTCA_CTP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ctp/include
+	  CACHE PATH "ctp include path")
 endif()
 if(BUILD_XTP)
   add_subdirectory(xtp)
