--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.1)
 
 project(votca-tools)
 
@@ -25,6 +25,11 @@ enable_language(CXX)
 #####################################################################
 
 include(CheckCXXCompilerFlag)
+
+# Check for C++11 standard
+set(CMAKE_CXX_STANDARD 11) # C++11...
+set(CMAKE_CXX_STANDARD_REQUIRED ON) #...is required...
+set(CMAKE_CXX_EXTENSIONS OFF) #...without compiler extensions like gnu++11
 
 ########################################################################
 # User input options                                                   #
