--- a/.travis.yml
+++ b/.travis.yml
@@ -107,7 +107,7 @@ script:
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal} ${MAN:+--devdoc}
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
     --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:+-DGMX_DOUBLE=yes}
-    tools $([[ ${MINIMAL} ]] || echo gromacs) csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
+    tools $([[ ${MINIMAL} ]] || echo gromacs) csg ${MAN:+csg-manual} csgapps ${TEST:+csg-tutorials}
     ${CTP:+kmc moo ctp} ${XTP:+moo ctp xtp}
 
 after_success:
