--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,14 @@ include(${CMAKE_MODULE_PATH}/UseLATEX.cmake)
 ######################################
 # Include the following subdirectory # 
 ######################################
-#add_subdirectory(src)
+set(TEX2EPS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/tex2eps)
+set(BBOX_ADD ${CMAKE_CURRENT_SOURCE_DIR}/scripts/bbox_add.pl)
+#cannot use add_subdir as file depends only work with in the same directory
+foreach(CURRENT_DIR functionality/fig usage/fig)
+  file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR})
+  include(${CURRENT_DIR}/CMakeLists.txt)
+endforeach()
+
 add_custom_target(gitversion COMMAND ${CMAKE_COMMAND}
   -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
   -DPROJECT_VERSION="${PROJECT_VERSION}"
@@ -44,14 +51,17 @@ if(NOT TARGET uninstall)
 endif()
 add_dependencies(uninstall uninstall-csg-manual)
 
+set(LATEX_DEFAULT_BUILD ps)
 add_latex_document(manual.tex
   BIBFILES votca.bib
   INPUTS inputfiles.tex introduction.tex newcommands.tex reference.tex theory.tex titlepage.tex usage.tex
     usage/boltzmann.tex usage/cgruns.tex usage/cibi.tex usage/dlpoly.tex usage/forcematching.tex usage/iterative_methods.tex
     functionality/propane.xml functionality/settings.xml
   IMAGES fig/logo.eps fig/propane.eps usage/fig/propane.eps fig/excl.eps fig/hexane2.eps fig/propane_hist2d.eps
-  TARGET_NAME manual DEPENDS gitid.tex
+  TARGET_NAME manual DEPENDS gitid.tex functionality/fig/flowchart.eps functionality/fig/iterativemethods.eps
+    usage/fig/flow_boltzmann.eps usage/fig/flow_fmatch.eps usage/fig/flow_ibi.eps
 )
+
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
   include(FeatureSummary)
   feature_summary(INCLUDE_QUIET_PACKAGES WHAT ALL)
