--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,17 +21,29 @@ if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.git)
   find_package(Git)
 endif(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.git)
 
+find_package(TXT2TAGS REQUIRED)
+
 find_program(CSG_CALL csg_call)
+if(NOT CSG_CALL)
+  message(FATAL_ERROR "csg_call not found")
+endif()
+find_program(CSG_PROPERTY csg_property)
+if(NOT CSG_PROPERTY)
+  message(FATAL_ERROR "csg_property not found")
+endif()
+execute_process(COMMAND ${CSG_CALL} --show-share OUTPUT_VARIABLE CSG_SHARE OUTPUT_STRIP_TRAILING_WHITESPACE)
+message(STATUS "CSG_SHARE is ${CSG_SHARE}")
+
+set(TEX2EPS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/tex2eps)
+set(BBOX_ADD ${CMAKE_CURRENT_SOURCE_DIR}/scripts/bbox_add.pl)
 
 include(${CMAKE_MODULE_PATH}/UseLATEX.cmake)
 
 ######################################
 # Include the following subdirectory # 
 ######################################
-set(TEX2EPS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/tex2eps)
-set(BBOX_ADD ${CMAKE_CURRENT_SOURCE_DIR}/scripts/bbox_add.pl)
 #cannot use add_subdir as file depends only work with in the same directory
-foreach(CURRENT_DIR functionality/fig usage/fig reference)
+foreach(CURRENT_DIR functionality/fig usage/fig reference reference/xml)
   file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR})
   include(${CURRENT_DIR}/CMakeLists.txt)
 endforeach()
@@ -60,6 +72,7 @@ add_latex_document(manual.tex
   IMAGES fig/logo.eps fig/propane.eps usage/fig/propane.eps fig/excl.eps fig/hexane2.eps fig/propane_hist2d.eps
   TARGET_NAME manual DEPENDS gitid.tex functionality/fig/flowchart.eps functionality/fig/iterativemethods.eps
     usage/fig/flow_boltzmann.eps usage/fig/flow_fmatch.eps usage/fig/flow_ibi.eps reference/csgid.tex
+    reference/xml/mapping.xml.tex reference/xml/csg_defaults.xml.tex reference/xml/topol.xml.tex
 )
 
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
