cmake: fixed parallel build

--- a/reference/programs/CMakeLists.txt
+++ b/reference/programs/CMakeLists.txt
@@ -4,7 +4,7 @@ add_custom_command(OUTPUT ${CURRENT_DIR}/config.t2t
   DEPENDS ${CURRENT_DIR}/../config.t2t)
 
 set(PROG_TEXS)
-file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex)
+file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex.cmake)
 foreach(prog csg_boltzmann csg_call csg_density csg_dlptopol csg_dump csg_fmatch csg_gmxtopol csg_imcrepack csg_inverse csg_map
   csg_property csg_resample csg_reupdate csg_stat)
   string(TOUPPER "${prog}" PROG)
@@ -18,8 +18,10 @@ foreach(prog csg_boltzmann csg_call csg_density csg_dlptopol csg_dump csg_fmatch
       > ${CURRENT_DIR}/${prog}.t2t
     COMMAND ${TXT2TAGS_EXECUTABLE} -t tex --no-header --infile ${CURRENT_DIR}/${prog}.t2t
       --outfile ${CURRENT_DIR}/${prog}.tex
-    DEPENDS ${prog_EXE} ${CURRENT_DIR}/config.t2t)
+      DEPENDS ${${PROG}} ${CURRENT_DIR}/config.t2t)
   list(APPEND PROG_TEXS ${CURRENT_DIR}/${prog}.tex)
-  file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex "\\input{${CURRENT_DIR}/${prog}}\n")
+  file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex.cmake "\\input{${CURRENT_DIR}/${prog}}\n")
 endforeach()
-add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex DEPENDS ${PROG_TEXS})
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex 
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_DIR}/all.tex DEPENDS ${PROG_TEXS})
