--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ option(BUILD_XTP "Build xtp" OFF)
 if(BUILD_XTP AND NOT BUILD_CTP)
   message(FATAL_ERROR "xtp needs ctp to be build")
 endif(BUILD_XTP AND NOT BUILD_CTP)
+option(BUILD_CSG_MANUAL "Build csg-manual")
 
 option(ENABLE_TESTING "Build and copy testing stuff" OFF)
 if(ENABLE_TESTING)
@@ -31,8 +32,12 @@ set(VOTCA_TOOLS_INCLUDE_DIR
 add_subdirectory(csg)
 set(VOTCA_SHARE ${CMAKE_SOURCE_DIR}/csg/share)
 set(VOTCA_CSG_INVERSE ${CMAKE_BINARY_DIR}/csg/scripts/csg_inverse)
+set(CSG_CALL ${CMAKE_BINARY_DIR}/csg/scripts/csg_call)
 set(VOTCA_PATH "${CMAKE_BINARY_DIR}/csg/scripts:${CMAKE_BINARY_DIR}/csg/src/tools")
 add_subdirectory(csg-tutorials)
+if(BUILD_CSG_MANUAL)
+  add_subdirectory(csg-manual)
+endif()
 set(VOTCA_CSG_LIBRARY votca_csg CACHE STRING "csg library name")
 set(VOTCA_CSG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/csg/include
 	CACHE PATH "csg include path")
