travis: added ghostscript to deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ addons:
       - inkscape
       - doxygen
       - graphviz
+      - ghostscript
       - python-numpy
       - gnuplot-nox
       - octave
