travis: added ghostscript to deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ addons:
       - cm-super
       - doxygen
       - graphviz
+      - ghostscript
       - python-numpy
       - gnuplot-nox
       - octave
